--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,13 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
+find_package(std_msgs REQUIRED)
 
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Position.msg"
+  "msg/PositionList.msg"
+    DEPENDENCIES builtin_interfaces std_msgs
   )
 
 ament_export_dependencies(rosidl_default_runtime)
